--- a/RecapAutomation/pom.xml
+++ b/RecapAutomation/pom.xml
@@ -39,4 +39,42 @@
 		</dependency>
 
 	</dependencies>
+	
+	<build>
+
+		<plugins>
+
+			<plugin>
+
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					
+<!-- 					<systemPropertyVariables> -->
+<!-- 					<executionBrowser>${browser}</executionBrowser> -->
+<!-- 					<appUrl>${urlToBeTested}</appUrl> -->
+<!-- 					</systemPropertyVariables> -->
+
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
+	
 </project>
